--- a/michaellukiman.com/timeline/timeline.css
+++ b/michaellukiman.com/timeline/timeline.css
@@ -17,7 +17,7 @@ body {
 
 h2 {
   margin: 3em 0 0 0;
-  font-size: 1.5em;
+  font-size: 1.0em;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
@@ -26,8 +26,9 @@ h2 {
  * timeline
  * ------------------------------------- */
 #timeline1 {
+
   list-style: none;
-  margin: 120px 0 0;
+  margin: 200px 210px 0;
   padding: 0;
   border-top: 8px solid #eee9dc;
   display: table;
@@ -43,16 +44,24 @@ h2 {
   margin: 0 0 15px;
 }
 
+li { font-size: 10px; text-align: center; }
+
 #timeline2 {
   position: absolute;
-  bottom: 40px;
+  top: 400px;
   list-style: none;
   margin: 120px 0 0;
   padding: 0;
-  border-top: 8px solid #eee9dc;
+  border-top: 2px dotted #eee9dc;
   display: table;
   border-spacing: 30px 0;
+  opacity:0.3;
 }
+
+#timeline2:hover {
+  opacity:1;
+}
+
 #timeline2 li {
   display: table-cell;
 }
@@ -65,7 +74,7 @@ h2 {
 
 .date {
   text-align: center;
-  top: -55px;
+  top: -40px;
   left: 0;
   right: 0;
   font-size: 0.95em;
@@ -87,17 +96,13 @@ h2 {
   position: absolute;
 }
 
-.content {
-  width: 200px;
-  max-height: 0;
-  margin-top: 40px;
-  vertical-align: top;
-  padding: 50px 15px 15px;
+.content1 {
   transition: width 0.4s linear, max-height 0.4s linear;
   border-width: 2px;
   border-style: solid;
   border-radius: 0.5em;
-  position: relative;
+  position: absolute;
+  text-align: center;
 }
 .content:before, .content:after {
   content: "";
@@ -120,41 +125,12 @@ h2 {
   left: 50%;
   margin-left: -12px;
 }
-.content p {
-  max-height: 0;
+.content1 p {
   color: transparent;
   text-align: justify;
   word-break: break-word;
   hyphens: auto;
   overflow: hidden;
-}
-
-.bottom_label {
-  font-size: 1.3em;
-  position: absolute;
-  z-index: 100;
-  cursor: pointer;
-  width: 200px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: block;
-  top: 60px;
-  left: 15px;
-}
-
-.top_label {
-  font-size: 1.3em;
-  position: absolute;
-  z-index: 100;
-  cursor: pointer;
-  width: 200px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: block;
-  bottom: 60px;
-  left: 15px;
 }
 
 .radio {
@@ -169,17 +145,175 @@ h2 {
 .radio:checked + .relative .circle {
   background: #433;
 }
-.radio:checked ~ .content {
+.radio:checked ~ .content1 {
   max-height: 180px;
   border-color: #eee9dc;
   max-width: 300px;
 }
-.radio:checked ~ .content p {
+.radio:checked ~ .content1 p {
   max-height: 200px;
   color: #eee9dc;
   transition: color 0.3s linear 0.3s;
 }
 
+/*-----------------------*/
+
+.content1 {
+  min-width: 230px;
+  margin-top: 40px;
+  vertical-align: top;
+  padding: 20px 15px 15px;
+  transition: width 0.4s linear, max-height 0.4s linear;
+  border-width: 2px 2px 2px 2px;
+  border-style: solid;
+  border-radius: 0.5em;
+  position: relative;
+}
+.content1:before, .content1:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  position: absolute;
+  pointer-events: none;
+  bottom: 100%;
+}
+.content1:before {
+  border-bottom-color: inherit;
+  border-width: 15px;
+  left: 50%;
+  margin-left: -15px;
+}
+.content1:after {
+  border-bottom-color: #433;
+  border-width: 12px;
+  left: 50%;
+  margin-left: -12px;
+}
+.content1 p {
+  max-height: 0;
+  color: transparent;
+  text-align: justify;
+  word-break: break-word;
+  hyphens: auto;
+  overflow: hidden;
+}
+
+/*-----------------------*/
+
+.content2 {
+  width: 100px;
+  max-height: 50px;
+  margin-top: -130px;
+  vertical-align: top;
+  padding: 15px 5px 20px 5px;
+  transition: width 0.4s linear, max-height 0.4s linear;
+  border-width: 2px;
+  border-style: dotted;
+  border-radius: 0.5em;
+  position: relative;
+  background-color: #433;
+}
+.content2:before, .content1:after {2  content: "";
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  position: absolute;
+  pointer-events: none;
+  bottom: 100%;
+}
+.content2:before {
+  border-bottom-color: inherit;
+  border-width: 15px;
+  left: 50%;
+  margin-left: -15px;
+}
+.content2:after {
+  border-bottom-color: #433;
+  border-width: 12px;
+  left: 50%;
+  margin-left: -12px;
+}
+.content2 p {
+  /*max-height: 0;*/
+  padding-top: 10px;
+  color: rgba(255,255,255,0.00);
+  word-break: break-word;
+  hyphens: auto;
+  overflow: auto;
+}
+
+/*---------------------*/
+
+.bottom_label {
+  font-size: 1.3em;
+  position: absolute;
+  z-index: 100;
+  cursor: default;
+  width: 200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
+  top: 60px;
+  left: 15px;
+}
+
+.top_label {
+  font-size: 1.0em;
+  position: absolute;
+  z-index: 100;
+  cursor: pointer;
+  width: 200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
+  bottom: 105px;
+  left: -40px;
+}
+
+.radio {
+  display: none;
+}
+
+.radio:checked + .relative .label {
+  cursor: auto;
+  max-width: 300px;
+  transition: width 0.3s linear 0.2s;
+}
+.radio:checked + .relative .circle {
+  background: #433;
+}
+.radio:checked ~ .content1 {
+  max-height: 180px;
+  border-color: #eee9dc;
+  max-width: 300px;
+}
+.radio:checked ~ .content1 p {
+  max-height: 200px;
+  color: #eee9dc;
+  transition: color 0.3s linear 0.3s;
+}
+
+}
+.radio:checked ~ .content2 {
+  max-height: 180px;
+  border-color: #eee9dc;
+  max-width: 300px;
+}
+.radio:checked ~ .content2 p {
+  max-height: 200px;
+  color: #eee9dc;
+  transition: color 0.3s linear 0.3s;
+}
+
+
 /* -------------------------------------
  * mobile phones (vertical version only)
  * ------------------------------------- */
+
+#footer {
+  position: absolute;
+  bottom: 10px;
+}
