--- a/michaellukiman.com/main.css
+++ b/michaellukiman.com/main.css
@@ -1,99 +1,75 @@
 /* for separate file landing page */
-
-html, body { color: #777; min-height: 100vh; min-width: 100vw; margin: 0;}
-
+/* Author: Michael Lukiman */
+html, body { color: #777; min-height: 100vh; max-width: 100vw; margin: 0;}
+body {
+	background-color:transparent;
+	text-align: center;
+	background-image:none;	/* make sure IE centers the page too */
+	}
+a {
+	text-decoration: none;
+	color: #333;
+	}
+div a {
+	}
 #header {
 	position: fixed;
-}
-
-#hamburger_news {
-	position: fixed;
-	top: 25px;
-	left: 25px;
-	width: 50px;
-	height: 50px;
-	background-color: #555;
-}
-
-#news {
-	
-}
-
+	}
 .banner{
-	text-align: right;
-		background-size: cover;
+	background-size: cover;
 	background-position: center;
-}
-
+	color: rgba(240, 200, 200, 0.9);
+	font-family: "Courier New", monospace;
+	text-align: center;
+	padding-top: 1vh;
+	border-color: rgba(255,100,100,0.8);
+	border-style: solid;
+	}
 #brain_states_banner{
-	height: 30vh;
-	width: 100%;
+	height: 28vh;
 	background-color: #EEE;
-	background-image: url('bs.jpg');
-}
-
+	background-image: url('website_drawings_exportb.jpg');
+	border-width: 20px 20px 0px 20px;
+	}
 #essays_banner{
-	height: 25vh;
+	height: 23vh;
 	background-color: #CCC;
-	background-image: url('parch.jpg');
-}
-
+	background-image: url('website_drawings_exportl.jpg');
+	border-width: 0px 20px 0px 20px;
+	}
 #functions_banner{
-	height: 20vh;
+	height: 19vh;
 	background-color: #AAA;
-	background-image: url('vectors.svg');
+	background-image: url('website_drawings_exportf.jpg');
+	border-width: 0px 20px 0px 20px;
 }
-
 #timeline_banner{
 	height: 15vh;
 	background-color: #999;
-	background-image: url('sedona.jpg');
-}
-
-@charset "utf-8";
-/* CSS Document */
-
-body {
-	background-color:transparent;
-	text-align: center;		
-	background-image:none;	/* make sure IE centers the page too */
-}
-
+	background-image: url('website_drawings_exportt.jpg');
+	border-width: 0px 20px 0px 20px;
+	}
+#consulting_block{
+	height:5vh;
+	border-width: 0px 20px 20px 20px;
+	}
 #wrapper {
 	width: 100vw;
-			/* center the page */
-}
-
+	}
 #content {
 	float: left;
 	font-family: Arial;
 	text-align: left;
 	width: 100%;				/* fill up the entire div */
 }
-
-#menu {
-	float: left;
-	border-bottom: none;		/* avoid a double border */
-	clear: both;				/* clear:both makes sure the content div doesn't float next to this one but stays under it */
-	width:100%;
-	height:20px;
-	text-align: left;
-	font-size: 85%;
-}
-
 #userbar {
 	float: right;
 	width: 250px;
-}
-
+	}
 #footer {
-	
-}
-
-a {
-	text-decoration: none;
-	color: #333;
-}
-
-div a {
-}
+	bottom: 3px;
+	opacity: .3;
+	position: fixed;
+	text-align:center;
+	width: 100vw;
+	}
